// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiChoiceList Renders empty list with custom caption props 1`] = `
<section
  className="multi-choice-list-modal__body"
>
  <p
    className="fd-has-font-style-italic"
  >
    not assigned message
  </p>
  <p
    className="fd-has-font-style-italic"
  >
    no entities available message
  </p>
</section>
`;

exports[`MultiChoiceList Renders empty list with default caption props 1`] = `
<section
  className="multi-choice-list-modal__body"
>
  <p
    className="fd-has-font-style-italic"
  />
  <p
    className="fd-has-font-style-italic"
  >
    No more entries available
  </p>
</section>
`;

exports[`MultiChoiceList Renders two lists of object items 1`] = `
<section
  className="multi-choice-list-modal__body"
>
  <ul>
    <li
      className="multi-choice-list__list-element"
    >
      <span>
        choosen 1
      </span>
      <button
        className="fd-button--light fd-button--negative"
        data-test-id="unselect-button"
        onClick={[Function]}
      >
        <span
          className="sap-icon--decline sap-icon--l"
        />
      </button>
    </li>
    <li
      className="multi-choice-list__list-element"
    >
      <span>
        choosen 2
      </span>
      <button
        className="fd-button--light fd-button--negative"
        data-test-id="unselect-button"
        onClick={[Function]}
      >
        <span
          className="sap-icon--decline sap-icon--l"
        />
      </button>
    </li>
  </ul>
  <div
    className="fd-dropdown"
  >
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            aria-controls="fd-xIqNeL0E"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-button sap-icon--navigation-down-arrow fd-dropdown__control"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            Choose items...
          </button>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`MultiChoiceList Renders two lists of simple items 1`] = `
<section
  className="multi-choice-list-modal__body"
>
  <ul>
    <li
      className="multi-choice-list__list-element"
    >
      <span>
        choosen 1
      </span>
      <button
        className="fd-button--light fd-button--negative"
        data-test-id="unselect-button"
        onClick={[Function]}
      >
        <span
          className="sap-icon--decline sap-icon--l"
        />
      </button>
    </li>
    <li
      className="multi-choice-list__list-element"
    >
      <span>
        choosen 2
      </span>
      <button
        className="fd-button--light fd-button--negative"
        data-test-id="unselect-button"
        onClick={[Function]}
      >
        <span
          className="sap-icon--decline sap-icon--l"
        />
      </button>
    </li>
    <li
      className="multi-choice-list__list-element"
    >
      <span>
        choosen 3
      </span>
      <button
        className="fd-button--light fd-button--negative"
        data-test-id="unselect-button"
        onClick={[Function]}
      >
        <span
          className="sap-icon--decline sap-icon--l"
        />
      </button>
    </li>
  </ul>
  <div
    className="fd-dropdown"
  >
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <button
            aria-controls="fd-T5Izb7lB"
            aria-expanded={false}
            aria-haspopup={true}
            className="fd-button sap-icon--navigation-down-arrow fd-dropdown__control"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            Choose items...
          </button>
        </div>
      </div>
    </div>
  </div>
</section>
`;
